--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <article class="app">
         <input type="checkbox" id="open">
         <section class="head">
-            <h1>Expenses</h1>
-            <label class="open-btn" for="open">
+            <h1 id="h1">Expenses</h1>
+            <div class="title-editor">
+                <input type="text" id="title" value="Expenses">
+                <button type="button"id="confirm">ok</button>
+            </div>
+            <label class="open-btn"  for="open">
                 <div id="left"></div>
                 <div id="right"></div>
             </label>
